# atn2obis

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
atn-to-obis/: _version.py  atn_nc_to_dwc.py
atn2obis/: atn_nc_to_dwc.py  dwc_convert.py  dwc_occurrence.py  fetch_data.py  ncei_accession_mapping.csv  ncei_mapping.py
atn2obis/templates/: eml.xml.j2  meta.xml.j2
notebooks/: 20250930 publishing log.txt  convert_ATNnc2DwC.ipynb  meta_analysis.ipynb  run_atn2obis.ipynb
tests/: test_fecth_nc.py  test_fetch_data.py  test_ncei_mapping.py
