[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "atn2obis"
description = "Convert ATN Satellite Telemetry NetCDF to Darwin Core Archive"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "Mathew Biddle", email = "mathew.biddle@noaa.gov" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://ioos.github.io/atn2obis/"
urls.homepage = "https://github.com/ioos/atn2obis"
urls.repository = "https://github.com/ioos/atn2obis"

[tool.setuptools]
packages = [
  "atn2obis",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }

[tool.setuptools_scm]
write_to = "atn2obis//_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.check-manifest]
ignore = [
  "*.yml",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]
